--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "angular-chosen-localytics": "~1.0.7"
+    "angular-chosen-localytics": "~1.0.7",
+    "angular-chart.js": "~0.8.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
